--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "cSpell.words": [
-    "bodmas"
+    "ADDEVENTLISTENER",
+    "bodmas",
+    "Eventlisteners",
+    "KEYDOWNS",
+    "rafce",
+    "TARIQQ"
   ]
 }
