--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,25 @@
 {
   "cSpell.words": [
     "ADDEVENTLISTENER",
+    "amet",
+    "aute",
     "bodmas",
+    "Duis",
+    "Emittance",
+    "enim",
     "Eventlisteners",
+    "filmset",
+    "Firestore",
+    "gitbash",
+    "headlessui",
+    "heroicons",
+    "irure",
     "KEYDOWNS",
     "rafce",
-    "TARIQQ"
-  ]
+    "svgr",
+    "swipeable",
+    "TARIQQ",
+    "veniam"
+  ],
+  "cSpell.ignoreWords": ["ghygfhhh"]
 }
